[package]
name = "asset-contract"
version = "1.0.0"
authors = ["NFTSentry Inc <info@nftsentry.co>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
serde_json = "1.0.81"

[dev-dependencies]
anyhow = "1.0"
near-units = "0.2.0"
test-case = "2.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.3.1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
