[package]
name = "inventory"
version = "0.1.0"
edition = "2021"
authors = ["NFTSentry Inc <info@nftsentry.co>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
serde_json = "1.0.81"
policy_rules = { path = "../policy_rules" }

[profile.release]
codegen-units = 1
strip = true
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
