[package]
name = "policy_rules_contract"
version = "0.1.0"
edition = "2021"
authors = ["NFTSentry Inc <info@nftsentry.co>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
policy_rules = { path = "../policy_rules" }
common_types = { path = "../common_types" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true